--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=
 DB_DATABASE=ihgs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
