--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "atayahmet/laravel-nestable": "^0.8.1",
         "barryvdh/laravel-debugbar": "^2.1",
         "barryvdh/laravel-dompdf": "^0.8.1",
         "browner12/helpers": "^1.1",
