--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "maatwebsite/excel": "^2.1",
+        "maatwebsite/excel": "~2.1.0",
         "maddhatter/laravel-fullcalendar": "^1.2",
         "twbs/bootstrap": "^3.3"
     },
