--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "atayahmet/laravel-nestable": "^0.8.1",
         "barryvdh/laravel-debugbar": "^2.1",
-        "barryvdh/laravel-dompdf": "^0.8.1",
         "browner12/helpers": "^1.1",
         "intervention/image": "^2.3",
         "landish/pagination": "~1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4",
-        "maatwebsite/excel": "~2.1.0",
-        "maddhatter/laravel-fullcalendar": "^1.2",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+		"laravelcollective/html": "^5.4",
+		"maddhatter/laravel-fullcalendar": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
